<resources>
    <string name="app_name">lifemanager</string>
    <string name="icon_menu_80_description">Icone de pessoa de gênero neutro, indicando menu, ao clicar abre as opções do perfil do usuário/configurações.</string>
    <string name="icon_all_task_80_description">Icone de lista de tarefas, indicando tarefas, ao clicar abre todas as tarefas do perfil, além de aparecer configurações das tarefas.</string>
    <string name="logo_life_manager_description">Logo do aplicativo Life Manager, é uma lista de tarefas, logo ao lado dela possui um relógio e uma folha em cima, indicando que o aplicativo oferece administração de tempo com leveza (indicado pela folha), as cores são leves alternando entre verde, amarelo e preto, todas brilhando com um tom animado.</string>
    <string name="current_tasks">Tarefas Atuais</string>
    <string name="points">Pontuação</string>
    <string name="name">Nome Completo</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="login">Entrar</string>
    <string name="send">Enviar</string>
    <string name="anchor_register">Não possui registro?\n<u>Registre-se clicando aqui</u></string>
    <string name="invalid_name">Digite um nome válido</string>
    <string name="invalid_username">Digite um username válido</string>
    <string name="invalid_email">Digite um e-mail válido</string>
    <string name="invalid_password">Digite uma senha válida</string>
    <string name="invalid_password_confirm">As senhas devem ser iguais</string>
    <string name="loading_message_sending_info">Enviando suas informações…</string>
    <string name="loading_message_authenticated_registring">Autenticado!\nAcessando banco de dados…</string>
    <string name="loading_message_success_redirecting">Sucesso!\nRedirecionando…</string>
    <string name="first_task">Vamos criar sua primeira tarefa</string>
    <string name="task_name">Primeiro, dê um nome a ela</string>
    <string name="task_name_example">Ex: Estudar matemática</string>
    <string name="task_priority">De 1 a 5, quanto essa tarefa é importante?</string>
    <string name="task_priority_example">Ex: 5</string>
    <string name="task_week_days">Quais dias da semana a tarefa ocorre</string>
    <string name="task_week_days_example">Clique aqui para escolher</string>
    <string name="create_task">Criar</string>
</resources>