<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtFirstTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/first_task"
        android:textSize="22sp"
        android:textColor="@color/light_gray_3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/task_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"/>

        <EditText
            android:id="@+id/inputTaskName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:hint="@string/task_name_example"
            android:textColorHint="@color/light_gray_1"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:autofillHints="name"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/task_priority"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/inputTaskPriority"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:hint="@string/task_priority_example"
            android:textColorHint="@color/light_gray_1"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:autofillHints="name"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/task_week_days"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/inputTaskWeekDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input"
            android:hint="@string/task_week_days_example"
            android:textColorHint="@color/light_gray_1"
            android:fontFamily="@font/poppins_medium"
            android:focusable="false"
            android:padding="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create_task"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>