<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_life_manager_description"
        android:src="@drawable/logo_lifemanager_272"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintBottom_toTopOf="@+id/anchorRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/shape_login"
        android:padding="25dp">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textColorHint="@color/light_gray_1"
            android:hint="@string/email"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/shape_input"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/warningEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textColorHint="@color/light_gray_1"
            android:hint="@string/password"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/shape_input"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/warningPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black_2"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:paddingHorizontal="40dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/anchorRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/anchor_register"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>