<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_life_manager_description"
        android:src="@drawable/logo_lifemanager_202"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/shape_login"
        android:padding="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="name"
            android:background="@drawable/shape_input"
            android:paddingHorizontal="15dp"
            android:hint="@string/name"
            android:textColorHint="@color/light_gray_1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="5dp"/>

        <TextView
            android:id="@+id/warningName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="username"
            android:background="@drawable/shape_input"
            android:paddingHorizontal="15dp"
            android:hint="@string/username"
            android:textColorHint="@color/light_gray_1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/warningUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:background="@drawable/shape_input"
            android:paddingHorizontal="15dp"
            android:hint="@string/email"
            android:textColorHint="@color/light_gray_1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/warningEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/shape_input"
            android:paddingHorizontal="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray_1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/warningPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/inputPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/shape_input"
            android:paddingHorizontal="15dp"
            android:hint="@string/password_confirm"
            android:textColorHint="@color/light_gray_1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/warningPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"/>

        <Button
            android:id="@+id/btnRegistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:text="@string/send"
            android:fontFamily="@font/poppins_bold"
            android:textSize="22sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>